--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,8 @@ html, body {
 	position: absolute;
 	top : 20%;
 	left: 20%;
-	-ms-transform:rotate(30deg); /* IE 9 */
-	-webkit-transform:rotate(30deg); /* Chrome, Safari, Opera */
-	transform:rotate(30deg); /* Standard syntax */
+	
+	/*-ms-transform:rotate(30deg);  
+	-webkit-transform:rotate(30deg);
+	transform:rotate(30deg); */
 }
