--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,6 +20,8 @@ html, body {
 	position: absolute;
 	top : 20%;
 	left: 20%;
+		width: 50px;
+	height: 50px;
 
 	-ms-transform:rotate(30deg);  
 	-webkit-transform:rotate(30deg);
