--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,10 +18,10 @@ html, body {
 
 #im{
 	position: absolute;
-	top : 40%;
-	left: 20%;
-	width: 50px;
-	height: 50px;
+	top: 50%;
+	top: calc(50% - 150px);
+	left: 50%;
+	left: calc(50% - 150px);
 
 	-ms-transform:rotate(30deg);  
 	-webkit-transform:rotate(30deg);
